 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####      Quake Army Knife 6.6 Changelog


6.6.0 Beta 8
============
* [DanielPharos]: Added Sven Co-op 5 support.

* [DanielPharos]: Added support for KEX Engine archives (.kpf files).

* [DanielPharos]: Added support for loading files larger than 2GB.

* [DanielPharos]: Added 4 view Qoole style map editor layout.

* [DanielPharos]: Added HL2 D.I.P.R.I.P. addon.

* [DanielPharos]: Made the classname specific editable again in the Map Editor; this was
          - blocked in 6.6.0 Beta 3.

* [DanielPharos]: Added Half-life 1: Source support.

* [DanielPharos]: Improved Steam folder handling to allow a per-game Steam Library location.

* [DanielPharos]: Made the "browse for folder" window resizable and added the "Create
          - new folder" button (only supported on Windows ME, Windows 2000, and higher).

* [DanielPharos]: Fixed a bug where path duplicators would be missing pieces when one
          - section was almost an extension of the previous one, but not quite.

* [DanielPharos]: Improvements to .rmf file loading: specifics are now also being loaded.

* [DanielPharos]: Added Cry of Fear support.

* [DanielPharos]: Cache texture sizes during the saving of .vmf files, and handle 'hidden'
          - items inside entities in .vmf files. Also, actually hide them.

6.6.0 Beta 7
============
* [DanielPharos]: Implemented Scroll Lock support in treeviews.

* [DanielPharos]: Implemented double buffering for the wireframe renderer, which results
          - in a very large performance improvement on modern operating systems.

* [DanielPharos]: Added Urban Terror 4 addon.

* [DanielPharos]: Improved fog/fade of the software renderer to match Glide more closely.
