@@ -14,6 +14,9 @@
 
 6.6.0 Beta 8
 ============
+* [DanielPharos]: Added workaround for broken colormap, conchars, and palette lumps
+          - in gfx WAD2 files.
+
 * [DanielPharos]: Added Sven Co-op 5 support.
 
 * [DanielPharos]: Added support for KEX Engine archives (.kpf files).
